@@ -47,6 +47,7 @@ if [ -e $CONFIGFILE ]; then
   db_set $NAME/stats-interval "$STATS_INTERVAL"
   db_set $NAME/json-dir "$JSON_DIR"
   db_set $NAME/json-interval "$JSON_INTERVAL"
+  db_set $NAME/json-location-accuracy "$JSON_LOCATION_ACCURACY"
   db_set $NAME/extra-args "$EXTRA_ARGS"
 fi
 
@@ -202,6 +203,7 @@ db_go || true; db_get $NAME/auto-start; if [ "$RET" = "true" ]; then
  db_go || true; db_get $NAME/json-interval; if [ -n "$RET" ] && [ "$RET" -gt 0 ]; then
   # only if json-interval was given and non-zero
   db_input low $NAME/json-dir || true
+  db_input low $NAME/json-location-accuracy || true
  fi
  
  db_input low $NAME/extra-args || true
