@@ -3,6 +3,8 @@ dump1090-mutability (1.08.2302.14+1mu-4) UNRELEASED; urgency=medium
   * Remove half-implemented --no-decode option.
   * Remove Windows support files that aren't needed for the Debian package.
   * Remove some legacy support scripts not needed by the Debian package.
+  * Add support for controlling the accuracy of the receiver location
+    written in the JSON metadata used by the webmap.
 
  -- Oliver Jowett <oliver@mutability.co.uk>  Sat, 27 Dec 2014 20:08:44 +0000
 
